PR fixes